# 1113354_Windowsfinal

./: .gitattributes  .gitignore  WindowsFormsApp1.slnx
WindowsFormsApp1/: AGENTS.md  AccountStore.cs  Form1.Designer.cs  Form1.cs  Form1.cs.bak  FusionLabPanel.tsx  FusionOS_Project_Technology_Audit.txt  FusionWebOS.tsx.bak  HtmlCanvasPipeline.tsx  HtmlTextureCube.tsx  HtmlTextureViewport.tsx  LiquidGlassSlider.tsx  WindowsFormsApp1.csproj  design-qa.md  gestureUtils.ts  htmlTextureFactory.ts  useHandGesture.ts
WindowsFormsApp1/.claude/: launch.json
WindowsFormsApp1/Frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.feature-tests.json  tsconfig.pet-tests.json  vite.config.ts
WindowsFormsApp1/IntegratedApps/MetroPulse/: CMakeLists.txt  README.md  server.py
WindowsFormsApp1/IntegratedApps/MetroPulse/src/: main.cpp
WindowsFormsApp1/IntegratedApps/MetroPulse/tests/: smoke.ps1
WindowsFormsApp1/IntegratedApps/MetroPulse/web/: app.js  index.html  report.generated.js  styles.css
WindowsFormsApp1/Properties/: AssemblyInfo.cs
WindowsFormsApp1/fusion_voice/: README.md  audio_diagnostics.py  bootstrap_voice.py  fusion_voice_server.py  requirements.txt  voice_activity.py  啟動語音服務.bat
WindowsFormsApp1/output/: collision-chunk-red.xml  combat-state-green-2.xml  combat-state-green.xml  enemy-code-green-scene-red.xml  fusion-editmode.xml  fusion-playmode.xml  player-ability-edit-green.xml  player-ability-play-green.xml  player-combat-green.xml  player-combat-play-green.xml
WindowsFormsApp1/tests/: FusionLocaleFirstChance.ps1
(+435 files in other folders)
